# PracticalMCPWithFastMCPCompanionToolkit

./: .gitignore  .pre-commit-config.yaml  00.Practical_MCP_with_FastMCP_and_LangChain.md  01.How_to_Use_This_Guide.md  02.Introduction_to_MCP_One_Protocol_Instead_of_a_Hundred_Integrations.md  03.MCP_Architecture_and_Workflow_How_Host_Client_and_Server_Fit_Together.md  04.Primitives_Capabilities_and_Utilities_The_Full_MCP_Feature_Set_and_When_to_Use_Each.md  05.Four_Concepts_People_Confuse_RAG_Function_Calling_MCP_Tools_and_MCP_Resources.md  06.How_MCP_Talks_JSONRPC_Transports_and_Message_Types.md  07.Following_One_MCP_Request_From_Prompt_to_Answer.md  08.Prerequisites__Setup_for_the_Development_Environment.md  09.Your_First_MCP_Server_A_Working_Calculator_in_Python.md  10.Build_an_MCP_Client_Wiring_an_LLM_to_Your_Server.md  11.MCP_vs_FastMCP_Untangling_the_Names_That_Confuse_Everyone.md  12.Getting_Started_with_FastMCP_From_Install_to_Your_First_Server.md  13.FastMCP_in_Depth_Building_The_Puppy_Guide_MCP.md  14.Shaping_Tools_the_LLM_Understands_Types_Docstrings_and_Validation.md  15.Async_vs_Sync_Tools_When_Each_One_Wins.md  16.Error_Handling_Writing_Messages_the_LLM_Can_Actually_Use.md  17.The_Context_Object_Making_Your_Tools_SessionAware.md  18.Building_a_Custom_MCP_Client_An_LLMPowered_REPL.md  19.ServertoClient_Logging_Talking_to_the_User_While_a_Tool_Runs.md  20.Pausing_a_Tool_to_Ask_the_User_Elicitation_in_MCP.md  21.Keeping_Clients_Informed_ServerSide_Progress_Reporting.md  22.Borrowing_the_Clients_LLM_Model_Sampling_in_FastMCP.md  23.Making_Your_Server_Remember_Session_State.md  24.Setup_Once_Share_Everywhere_The_Server_Lifespan.md  25.FastMCP_Middleware_Gates_Around_Every_Request.md  36.Afterword.md  (+10 more)
(+50 files in other folders)
